# wordy

./: .env.example  .gitignore  Cargo.toml  Dockerfile  readme.md
.github/workflows/: docker-image.yml
src/: channel.rs  lib.rs  main.rs  ws.rs
src/auth/: jwt.rs  mod.rs
src/utils/: azure_tts.rs  event.rs  mod.rs  openai.rs
src/ws/: mod.rs  router.rs  state.rs
