[package]
name = "chat-ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aspeak = "6.0.1"
axum = { version = "0.6.20", features = ["ws", "headers"] }
blake2 = "0.10.6"
chrono = "0.4.31"
dotenv = "0.15.0"
futures = "0.3.28"
futures-util = "0.3.28"
hex = "0.4.3"
jsonwebtoken = "8.3.0"
once_cell = "1.18.0"
openai_dive = "0.2.13"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["fs", "trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = "1.4.1"
