[package]
name = "chat-ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aspeak = { version = "6.0.1", features = ["rustls-tls-webpki-roots"] }
axum = { version = "0.7.2", features = ["ws"] }
axum-extra = {version = "0.9.0", features = ["typed-header"] }
blake2 = "0.10.6"
chrono = "0.4.31"
dotenv = "0.15.0"
futures = "0.3.28"
futures-util = "0.3.28"
hex = "0.4.3"
jsonwebtoken = "9"
once_cell = "1.18.0"
openai_dive = {version = "0.3", features = ["rustls-tls"]}
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = "1.4.1"
